<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/feed_pos"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/feed_post_user_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_person_24"
        app:civ_border_color="@color/black"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feed_post_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/default_username"
        app:layout_constraintBottom_toBottomOf="@+id/feed_post_user_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/feed_post_user_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feed_post_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16dp"
        android:text="@string/default_caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_post_user_photo" />

    <ImageView
        android:id="@+id/feed_post_photo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/default_content_description"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_post_text"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerHorizontal"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:showDividers="middle"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_post_text"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/feed_post_like_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_like"
            android:textColor="@color/black"
            app:icon="@drawable/ic_baseline_thumb_up_24"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/feed_post_comment_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_comment"
            android:textColor="@color/black"
            app:icon="@drawable/ic_baseline_mode_comment_24"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/feed_post_share_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_share"
            android:textColor="@color/black"
            app:icon="@drawable/ic_baseline_share_24"
            app:iconTint="@color/black" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/default_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/fakebook_feed_post_separator"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>